# ultraFiltrationSystem

./: .env  .gitignore  .uf_prefs.json  HARDWARE.md  README.md  pyproject.toml  requirements.txt  setup.sh
branding/: pi_boot_setup.md  splash_template.html
docs/: automation_plan.md  compilation_guide.md  plan.md
oldCode/: ValveInterface.py  date.p  month.p  year.p
scripts/: install.sh  setup_splash.sh
src/: config.py  main.py
src/hardware/: gpio_controller.py  mock_gpio.py
src/processes/: process_manager.py
src/ui/: app.py  theme.py  widgets.py
src/ui/frames/: auto_frame.py  edit_frame.py  info_frame.py  main_frame.py  manual_frame.py  manual_steps_frame.py  select_frame.py
